# riskpilot-ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DATA_SOURCE.md  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/data/: prices.csv
backend/src/riskpilot/: __init__.py  config.py  main.py  report.py  schema.py  ticker_report.py
backend/src/riskpilot/eval/: run.py
backend/src/riskpilot/llm/: __init__.py  explain.py  number_guardrail.py  openai_client.py  template.py
backend/src/riskpilot/risk_engine/: __init__.py  dataset.py  metrics.py  portfolio.py  sample.py  score.py  ticker.py
backend/tests/: test_api.py  test_explain_pipeline.py  test_metrics.py  test_no_llm_in_engine.py  test_number_guardrail.py  test_portfolio.py  test_score.py  test_ticker.py
docs/: DEPLOY_BACKEND.md  RELIABILITY.md  RiskPilot_AI_Project_Interview_Guide.docx  UI_RESEARCH_AND_ROADMAP.md  UX_RESEARCH.md
docs/superpowers/plans/: 2026-06-30-ui-functional-pass.md  2026-07-01-condensed-2026-ui.md  2026-07-01-phase1-ship-redesigned-ui.md  2026-07-01-phase3-technical-seo.md  (+2 more)
frontend/: .gitignore  .npmrc  Dockerfile  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: analyze.spec.ts  compare.spec.ts  redesign.spec.ts  theme.spec.ts  tradingview-lazy.spec.ts  visual.spec.ts
scripts/: doctor.sh  test-live-llm.sh
(+77 files in other folders)
